syntax = "proto3";

option go_package = "out/pb_order";

message Order {
  enum Side {
    UNKNOWN = 0;
    BUY = 1;
    SELL = 2;
    BUY_MARKET = 3;
    SELL_MARKET = 4;
  }

  enum OrderType {
    DEFAULT = 0;
    MAKER = 1;
    FOK = 2;
    IOC = 3;
  }

  string pair = 1;
  double price = 2;
  double amount  = 3;
  double avgPrice = 4;
  double dealAmount = 5;
  double fee  = 6;
  string cid  = 7; // client order id
  string orderId  = 8;
  string status = 9; // string{"UNFINISH", "PART_FINISH", "FINISH", "CANCEL", "REJECT", "CANCEL_ING", "FAIL"}
  Side side = 10;
  string type = 11;
  OrderType orderType = 12;
  int64 orderTime = 13;
  int64 finishedTime = 14;
}